--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
+    "react-wow": "^1.0.0",
     "sass": "^1.81.0",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
